Revert use of List::of in PXRComponentProxy.
Revert to unmodifiable list in initPropertyActions() - list allowed to
contain null.